# global-backend

./: .env.example  .gitignore  CLAUDE.local.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: repository-metadata.yml
app/: __main__.py  main.py  runner.py
app/api/: installations.py  languages.py  public_preview.py  repositories.py  tasks.py
app/application/: __init__.py  installation_service.py  translation_task_service.py
app/controller/: __init__.py  installation_controller.py  language_controller.py  public_preview_controller.py  repository_controller.py  translation_task_controller.py
app/core/: config.py  errors.py  exceptions.py  github.py  openapi.py  response.py
app/db/: __init__.py  base.py  engine.py  schema.py  session.py
app/domain/: languages.py  markdown_files.py  repository.py  task.py
app/dto/: __init__.py  installation.py  installation_dto.py  repository.py  translation_task.py  translation_task_dto.py
app/models/: __init__.py  base.py  installation_account.py  installation_account_model.py  translation_file.py  translation_file_model.py  translation_task.py  translation_task_model.py
app/queues/: __init__.py  translation_task_queue.py
app/repositories/: __init__.py  installation_account_repository.py  translation_task_repository.py
app/services/: github_app.py  installation_service.py  markdown_discovery.py  markdown_fidelity.py  pr_description.py  public_repository.py  task_runner.py  translation_provider.py  translation_task_service.py
app/vo/: __init__.py  error_vo.py  installation_vo.py  repository_vo.py  translation_task_vo.py
app/workers/: translation_jobs.py
db/schema/: README.md  postgresql.sql
docs/design/: backend-engineering-architecture-review.md
docs/operations/: README.md  local-development.md
scripts/: init_db.py  sync-github-metadata.sh
tests/: conftest.py  test_config.py  test_docker_compose_config.py  test_github_app_client.py  test_runner.py  test_startup_docs.py  test_startup_entrypoints.py
tests/api/: test_authorization_enforcement.py  test_installation_repositories.py  test_installations.py  test_languages_api.py  test_persistence_api.py  (+6 more)
(+156 files in other folders)
