[project]
name = "global-backend"
version = "0.1.0"
description = "GitHub Markdown Translator 后端：GitHub App 驱动的 Markdown 翻译与 PR 提交服务"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["github-app", "markdown", "translation", "fastapi", "i18n"]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pyjwt>=2.9.0",
    "cryptography>=43.0.0",
    "pydantic-settings>=2.6.0",
    "uvicorn>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.2.0",
    "rq>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "respx>=0.22.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
